Signed-off-by: heavenK <heaven_k0001@163.com>

--- a/Myerp/Tpl/Chanpin/xingcheng.html
+++ b/Myerp/Tpl/Chanpin/xingcheng.html
@@ -65,8 +65,9 @@
     <table cellspacing="1" cellpadding="0" border="0" width="100%" class="edit view">
       <tbody>
         <tr>
-          <th align="left" colspan="8"> <h4>行程：第<{$t+1}>天</h4>
+          <th align="left" > <h4>行程：第<{$t+1}>天</h4>
           </th>
+          <th align="left" >标题：<input type="text" name="title[]" value="<{$xingcheng[$count]['title']}>" style="width:200px;"/></th>
         </tr>
         <tr>
           <td valign="top" scope="row" style="min-width:100px;"> 住宿: </td>
