--- a/Myerp/Tpl/Chanpin/zituandingdan.html
+++ b/Myerp/Tpl/Chanpin/zituandingdan.html
@@ -49,9 +49,11 @@
                 <tr height="20">
                   <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 编号/状态/审核状态 </div></th>
+                  <th scope="col" nowrap="nowrap"><div> 电商订单号 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:150px;"><div> 来源/姓名/收客人 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 成人数/儿童/领队 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 团费 </div></th>
+                  <th scope="col" nowrap="nowrap"><div> 付款状态 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 提成类型/订单类型 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 新客户/老客户 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 时间 </div></th>
@@ -61,9 +63,11 @@
                 <tr height="40" class="evenListRowS1">
                   <td scope="row" align="left" valign="top"><{$i+1}></td>
                   <td scope="row" align="left" valign="top"><a target="_blank" href="<{:SITE_INDEX}>Xiaoshou/dingdanxinxi/showtype/1/chanpinID/<{$v['chanpinID']}>"><{$v['chanpinID']}>/<{$v['status']}>/<{$v['status_shenhe']}></a></td>
+                  <td scope="row" align="left" valign="top"><{$v['orderID']}></td>
                   <td scope="row" align="left" valign="top"><{$v['bumen_copy']}>/<{$v['user_name']}>/<{$v['owner']}></td>
                   <td scope="row" align="left" valign="top"><{$v['chengrenshu']}>/<{$v['ertongshu']}>/<{$v['lingdui_num']}></td>
                   <td scope="row" align="left" valign="top"><{$v['jiage']}></td>
+                  <td scope="row" align="left" valign="top"><{$v['ispay']}></td>
                   <td scope="row" align="left" valign="top"><{$v['ticheng']['title']}>/<{$v['type']}></td>
                   <td scope="row" align="left" valign="top"><{$v['xinkehu_num']}>/<{$v['laokehu_num']}></td>
                   <td scope="row" align="left" valign="top" style="min-width:80px;"><php>echo date('m/d H:i',$v['time'])</php></td>
@@ -81,9 +85,11 @@
                 <tr height="20">
                   <th scope="col" nowrap="nowrap"><div> 序号 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 编号/状态/审核状态 </div></th>
+                  <th scope="col" nowrap="nowrap"><div> 电商订单号 </div></th>
                   <th scope="col" nowrap="nowrap" style="min-width:150px;"><div> 来源/姓名/收客人 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 成人数/儿童/领队 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 团费 </div></th>
+                  <th scope="col" nowrap="nowrap"><div> 付款状态 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 提成类型/订单类型 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 新客户/老客户 </div></th>
                   <th scope="col" nowrap="nowrap"><div> 时间 </div></th>
@@ -93,9 +99,11 @@
                 <tr height="40" class="evenListRowS1">
                   <td scope="row" align="left" valign="top"><{$i+1}></td>
                   <td scope="row" align="left" valign="top"><a target="_blank" href="<{:SITE_INDEX}>Xiaoshou/dingdanxinxi/showtype/1/chanpinID/<{$v['chanpinID']}>"><{$v['chanpinID']}>/<{$v['status']}>/<{$v['status_shenhe']}></a></td>
+                  <td scope="row" align="left" valign="top"><{$v['orderID']}></td>
                   <td scope="row" align="left" valign="top"><{$v['bumen_copy']}>/<{$v['user_name']}>/<{$v['owner']}></td>
                   <td scope="row" align="left" valign="top"><{$v['chengrenshu']}>/<{$v['ertongshu']}>/<{$v['lingdui_num']}></td>
                   <td scope="row" align="left" valign="top"><{$v['jiage']}></td>
+                  <td scope="row" align="left" valign="top"><{$v['ispay']}></td>
                   <td scope="row" align="left" valign="top"><{$v['ticheng']['title']}>/<{$v['type']}></td>
                   <td scope="row" align="left" valign="top"><{$v['xinkehu_num']}>/<{$v['laokehu_num']}></td>
                   <td scope="row" align="left" valign="top" style="min-width:80px;"><php>echo date('m/d H:i',$v['time'])</php></td>
