Signed-off-by: heavenK <heaven_k0001@163.com>

--- a/Myerp/Tpl/Chanpin/dingdanxinxi.html
+++ b/Myerp/Tpl/Chanpin/dingdanxinxi.html
@@ -149,6 +149,14 @@ function quxiao_after(data,status){
           </td>
         </tr>
         <tr>
+          <td align="left" style="height: 32px">电商订单号： </td>
+          <td align="left" style="height: 32px"><{$dingdan['orderID']}></td>
+          <td align="left" style="height: 32px"> 是否付款：</td>
+          <td align="left" style="height: 32px"><{$dingdan['ispay']}></td>
+          <td align="left" style="height: 32px"> </td>
+          <td align="left" style="height: 32px"></td>
+        </tr>
+        <tr>
           <td align="left" style="height: 32px"> 成人数：</td>
           <td align="left" style="height: 32px"><{$dingdan['chengrenshu']}></td>
           <td align="left" style="height: 32px"> 儿童数：</td>
