--- a/Myerp/Tpl/SetSystem/templatelist.html
+++ b/Myerp/Tpl/SetSystem/templatelist.html
@@ -41,7 +41,7 @@ var SITE_INDEX = '<{:SITE_INDEX}>';
                     myautocomplete("#parentID<{$v[systemID]}>",'部门');
                  <php>}</php>
         });
-        var categorytype = '部门';
+        //var categorytype = '部门';
         </script>
         <tr class="pagination">
           <td colspan="11"><table cellpadding="0" cellspacing="0" width="100%" class="paginationTable">
@@ -96,10 +96,16 @@ var SITE_INDEX = '<{:SITE_INDEX}>';
                           { title: "<{$v[title]}>", systemID: "<{$v['systemID']}>" },
                  <php>}</php>
              ];
+			
+			var wanglai = [
+				<php>foreach($wanglailist as $v){</php>
+                          { title: "<{$v[title]}>", systemID: "<{$v['systemID']}>" },
+                 <php>}</php>
+			];
             
             jQuery().ready(function() {
                     <php>foreach($systemDClist as $v){</php>
-                        myautocomplete("#<{$v[systemID]}>",'部门');
+                        myautocomplete("#<{$v[systemID]}>","<{$category['category']['type']}>");
                      <php>}</php>
             });
             </script>
@@ -108,14 +114,14 @@ var SITE_INDEX = '<{:SITE_INDEX}>';
                   <tbody>
                     <tr>
                       <td nowrap="nowrap" class="paginationActionButtons"><strong><{$nowDir['title']}></strong>&nbsp;
-                        <input type="button" class="button" value=" 新增 " onclick="insertdepartment();"></td>
+                        <input type="button" class="button" value=" 新增 " onclick="insertdepartment('<{$category['category']['type']}>');"></td>
                     </tr>
                   </tbody>
                 </table></td>
             </tr>
             <tr height="20">
               <th scope="col" nowrap="nowrap"> 序号 </th>
-              <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 部门 </div></th>
+              <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> <{$category['category']['type']}> </div></th>
               <th scope="col" nowrap="nowrap" style="min-width:100px;"><div> 操作 </div></th>
             </tr>
             <php>$i=0;foreach($systemDClist as $v){$i++;</php>
