Signed-off-by: heavenK <heaven@we54.com>

--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -184,6 +184,7 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
       <li> <a href="<{:SITE_INDEX}>Xiaoshou/dingdanlist">订单控管</a> </li>
       <li> <a href="<{:SITE_INDEX}>Chanpin/customer">游客管理</a> </li>
       <li> <a href="<{:SITE_INDEX}>Caiwu/jixiao_tongji/type/员工">统计(绩效)</a> </li>
+      <li> <a href="<{:SITE_INDEX}>Chanpin/cangbaotu">藏宝途</a> </li>
     </ul>
     </span> <span id="moduleLink_1" 
     
