Signed-off-by: heavenK <heaven@we54.com>

--- a/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
@@ -344,6 +344,25 @@
       <td align="left" height="28px" width="100%" style=" border-left:none"></td>
     </tr>
     <php>}</php>
+    <php>if(count($newlinrun)> 10){</php>
+    <tr >
+      <td align="left" height="28px" style="min-width:148px"><table  border="0" cellspacing="0" cellpadding="0" >
+          <tr>
+            <td width="80" align="center" style="border:none; border-right:#000 solid 1px"></td>
+            <td  width="70" align="center" style="border:none; border-right:#000 solid 1px">&nbsp;</td>
+          </tr>
+        </table></td>
+      <php> for($i=10;$i < 15;$i++){ </php>
+      <td align="left" height="28px" style="min-width:148px; border-left:none"><table  border="0" cellspacing="0" cellpadding="0" >
+          <tr>
+            <td width="80" align="center" style="border:none; border-right:#000 solid 1px">&nbsp;<{$newlinrun[$i]['title']}>&nbsp;</td>
+            <td  width="70" align="center" style="border:none; border-right:#000 solid 1px">&nbsp;<{$newlinrun[$i]['value']}>&nbsp;</td>
+          </tr>
+        </table></td>
+      <php>}</php>
+      <td align="left" height="28px" width="100%" style=" border-left:none"></td>
+    </tr>
+    <php>}</php>
   </table>
   <table width="100%" border="0" cellpadding="0" cellspacing="0" style="border-top:1px solid #000; margin-top:4px;">
     <tbody>
